added code to folder

--- a/presentations/graphics group/An Application of LIME to a Random Forest.Rmd
+++ b/presentations/graphics group/An Application of LIME to a Random Forest.Rmd
@@ -544,7 +544,7 @@ Then we tried more of the feature distribution estimation methods
 Next we created our own way to select bins using trees
 
 ```{r echo = FALSE, message = FALSE}
-source("../../code/helper_functions.R")
+source("./code/helper_functions.R")
 ```
 
 .pull-left[
